rework examples, add permalink copy in detail pages, added mandatory information in data dictionary